syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.anner.comm.example.grpc.greeter";
option java_outer_classname = "HelloWorldProto";

package helloworld;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}
  rpc SayHelloToManyPeople (stream HelloRequestBytes) returns (HelloReply) {}
  rpc SayHelloMultiTimes (HelloRequest) returns (stream HelloReplyBytes) {}
  rpc SayHelloByStream (stream HelloRequestBytes) returns (stream HelloReplyBytes) {}
}

// The request message containing the user's name.
message HelloRequest{
  string name = 1;
} 
message HelloRequestBytes {
  bytes name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}
message HelloReplyBytes {
  bytes message = 1;
}